--- a/typer/core/templates/user/home.html.j2
+++ b/typer/core/templates/user/home.html.j2
@@ -14,4 +14,5 @@
     {% for event in events %}
     <li><a href="/typer/event/{{ event.id }}">{{ event.name }}</a></li>
     {% endfor %}
+<h4><a href="/typer/event/new">Dodaj nowe</a></h4>
 {% endblock %}
