--- a/typer/core/templates/event/new.html.j2
+++ b/typer/core/templates/event/new.html.j2
@@ -2,7 +2,7 @@
 
 {% block content %}
 <form method="post" action="">
-    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}"/>
     {{ event_form }}
     <input type="submit" value="Dodaj wydarzenie" />
 </form>
