added datetimepicker + changed to Bootstrap v3

--- a/typer/core/templates/event/index.html.j2
+++ b/typer/core/templates/event/index.html.j2
@@ -9,4 +9,6 @@
     <li><a href="/typer/event/{{ event.id }}">{{ event.name }}</a></li>
     {% endfor %}
 </ul>
+<hr/>
+<h4><a href="/typer/event/new">Dodaj nowe</a></h4
 {% endblock %}
