--- a/typer/core/templates/common/base.html.j2
+++ b/typer/core/templates/common/base.html.j2
@@ -33,6 +33,11 @@
     <a class="btn btn-info" href="/login">Zaloguj się</a>
     {% endif %}
 </nav>
+
+{% if alert %}
+<div class="alert alert-{{ alert.type }}" role="alert">{{ alert.text }}</div>
+{% endif %}
+
 <div class="container">
     {% block content %}
     {% endblock %}
