added django messages

--- a/typer/core/templates/event/index.html.j2
+++ b/typer/core/templates/event/index.html.j2
@@ -10,5 +10,5 @@
     {% endfor %}
 </ul>
 <hr/>
-<h4><a href="/typer/event/new">Dodaj nowe</a></h4
+<h4><a href="/typer/event/new">Dodaj nowe</a></h4>
 {% endblock %}
