--- a/typer/core/templates/common/base.html.j2
+++ b/typer/core/templates/common/base.html.j2
@@ -34,8 +34,12 @@
     {% endif %}
 </nav>
 
-{% if alert %}
-<div class="alert alert-{{ alert.type }}" role="alert">{{ alert.text }}</div>
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <p{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}<p>
+    {% endfor %}
+</div>
 {% endif %}
 
 <div class="container">
