changed event frontend

--- a/typer/core/templates/common/base.html.j2
+++ b/typer/core/templates/common/base.html.j2
@@ -31,30 +31,15 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             {% if username %}
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> {{ username }}</a></li>
+            <li><a href="/typer"><span class="glyphicon glyphicon-user"></span> {{ username }}</a></li>
             <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Wyloguj się</a></li>
             {% else %}
             <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Zaloguj się</a></li>
             {% endif %}
 
         </ul>
-        <!--<div class="col-md-6">-->
-        <!--{% if username %}-->
-        <!--<p>Jesteś zalogowany jako: <b>{{ username }}</b></p>-->
-        <!--{% endif %}-->
-        <!--</div>-->
-        <!--<div class="col-md-2 col-md-offset-1">-->
-        <!--{% if username %}-->
-        <!--<a class="btn btn-danger" href="/logout">Wyloguj się</a>-->
-        <!--{% else %}-->
-        <!--<a class="btn btn-info" href="/login">Zaloguj się</a>-->
-        <!--{% endif %}-->
-        <!--</div>-->
-
-        <!--</div>-->
     </div>
 </nav>
-
 
 {% if messages %}
 <div class="messages">
