--- a/typer/core/templates/event/index.html.j2
+++ b/typer/core/templates/event/index.html.j2
@@ -1,14 +1,40 @@
 {% extends 'common/base.html.j2' %}
 
 {% block content %}
-<body>
-<h1>Lista wydarzeń</h1>
-<hr/>
-<ul>
-    {% for event in events %}
-    <li><a href="/typer/event/{{ event.id }}">{{ event.name }}</a></li>
-    {% endfor %}
-</ul>
-<hr/>
-<h4><a href="/typer/event/new">Dodaj nowe</a></h4>
+<div class="row">
+    <div class="col-md-6">
+        <h4>Lista wydarzeń</h4>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Nazwa</th>
+                <th>Gospodarze</th>
+                <th>Goście</th>
+                <th>Czas rozpoczęcia</th>
+            </tr>
+            </thead>
+            {% for event in events %}
+            <tr>
+            <td><a href="/typer/event/{{ event.id }}">{{ event.name }}</a></td>
+            <td>{{ event.home_name }}</td>
+            <td>{{ event.away_name }}</td>
+            <td>{{ event.start_time.strftime('%Y-%m-%d %H:%M') }}</td>
+            {% endfor %}
+            </tr>
+        </table>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <a href="/typer/event/new">
+        <button type="button" class="btn btn-default btn-sm btn-block" >Dodaj nowe</button>
+        </a>
+
+    </div>
+</div>
 {% endblock %}
