--- a/typer/core/templates/user/home.html.j2
+++ b/typer/core/templates/user/home.html.j2
@@ -2,14 +2,14 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6 col-md-offset-3 center">
         <h1>Witaj, <strong>{{ username }}</strong>!</h1>
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-md-6">
-        <h2>Twoje portfele:</h2>
+        <h2>Twoje portfele</h2>
     </div>
 </div>
 <div class="row">
@@ -32,7 +32,7 @@
 <hr>
 <div class="row">
     <div class="col-md-6">
-        <h2>Dostępne wydarzenia:</h2>
+        <h2>Dostępne wydarzenia</h2>
     </div>
 </div>
 <div class="row">
@@ -61,7 +61,6 @@
         <a href="/typer/event/new">
         <button type="button" class="btn btn-default btn-sm btn-block" >Dodaj nowe</button>
         </a>
-
     </div>
 </div>
 {% endblock %}
