--- a/typer/core/templates/common/base.html.j2
+++ b/typer/core/templates/common/base.html.j2
@@ -44,7 +44,7 @@
 {% if messages %}
 <div class="messages">
     {% for message in messages %}
-    <p{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}<p>
+    <p{% if message.tags %} class="alert alert-{{ message.tags }} center"{% endif %}>{{ message }}<p>
     {% endfor %}
 </div>
 {% endif %}
