--- a/typer/core/templates/common/base.html.j2
+++ b/typer/core/templates/common/base.html.j2
@@ -27,15 +27,16 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand">Typer</a>
+            <a class="navbar-brand" href="/typer"><span class="glyphicon glyphicon-king"></span> Typer</a>
         </div>
         <div class="col-md-1"></div>
         <ul class="nav navbar-nav navbar-left">
             {% if username %}
             <li><a href="/typer/wallet"><span class="glyphicon glyphicon glyphicon-euro"></span> Portfele</a></li>
-            <li><a href="/typer/event"><span class="glyphicon glyphicon glyphicon-star"></span> wydarzenia</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span><span class="glyphicon glyphicon-user"></span> Znajomi</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon glyphicon glyphicon-signal"></span> Rankingi</a></li>
+            <li><a href="/typer/event"><span class="glyphicon glyphicon glyphicon-star"></span> Wydarzenia</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span><span class="glyphicon glyphicon-user"></span>
+                Znajomi</a></li>
+            <li><a href="/typer/ranking"><span class="glyphicon glyphicon glyphicon glyphicon-signal"></span> Ranking</a></li>
             {% endif %}
         </ul>
         <ul class="nav navbar-nav navbar-right">
