--- a/typer/core/templates/event/info.html.j2
+++ b/typer/core/templates/event/info.html.j2
@@ -38,13 +38,13 @@
 
 <div class="row">
     <div class="col-md-2 col-md-offset-1 center">
-        <h4>1: {{event.home_odd }}</h4>
+        <h4>1: {{ '%0.2f' % event.home_odd }}</h4>
     </div>
     <div class="col-md-2 col-md-offset-2 center">
-        <h4>X: {{event.draw_odd }}</h4>
+        <h4>X: {{ '%0.2f' % event.draw_odd }}</h4>
     </div>
     <div class="col-md-2 col-md-offset-2 centers">
-        <h4>2: {{event.away_odd }}</h4>
+        <h4>2: {{ '%0.2f' % event.away_odd }}</h4>
     </div>
 </div>
 
@@ -92,9 +92,9 @@
                 <td>{{ bet.creation_time.strftime('%Y-%m-%d %H:%M') }}</td>
                 {% if user == bet.wallet.owner %}
                 <td>{{ bet.chosen_result }}</td>
-                <td>{{ bet.value }}</td>
-                <td>{{ bet.odd }}</td>
-                <td>{{ bet.reward }}</td>
+                <td>{{ '%0.2f' % bet.value }} zł</td>
+                <td>{{ '%0.2f' % bet.odd }}</td>
+                <td>{{ '%0.2f' % bet.reward }} zł</td>
                 {% endif %}
                 {% if not event.open %}
                 <td>{{ bet.reward * bet.won }}</td>
