--- a/typer/core/templates/event/info.html.j2
+++ b/typer/core/templates/event/info.html.j2
@@ -69,7 +69,7 @@
 
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
-        <table class="table table-striped" id="bets_history">
+        <table class="table {% if event.open %}table-striped{% endif %}" id="bets_history">
             <thead>
             <tr>
                 <th>Gracz</th>
@@ -86,18 +86,24 @@
             </thead>
 
             {% for bet in bets %}
+                {% if bet.open %}
             <tr>
+                {% else %}
+                    {% if bet.won %}
+            <tr class="won">
+                    {% else %}
+            <tr class="lost">
+                    {% endif %}
+                {% endif %}
                 <td>{{ bet.wallet.owner}}</td>
                 <td>{{ bet.wallet }}</td>
                 <td>{{ localtime(bet.creation_time).strftime('%Y-%m-%d %H:%M') }}</td>
-                {% if user == bet.wallet.owner %}
+                {% if user == bet.wallet.owner or not event.open %}
                 <td>{{ bet.chosen_result }}</td>
                 <td>{{ '%0.2f' % bet.value }} zł</td>
                 <td>{{ '%0.2f' % bet.odd }}</td>
                 <td>{{ '%0.2f' % bet.reward }} zł</td>
-                {% endif %}
-                {% if not event.open %}
-                <td>{{ bet.reward * bet.won }}</td>
+                <td>{{ '%0.2f' % (bet.reward * bet.won) }} zł</td>
                 {% endif %}
             </tr>
             {% endfor %}
