--- a/typer/core/templates/wallet/info.html.j2
+++ b/typer/core/templates/wallet/info.html.j2
@@ -6,7 +6,7 @@
         <h2><strong>#{{ wallet.id }}</strong></h2>
     </div>
     <div class="col-md-6 col-md-offset-2 center">
-        <h2><strong>{{ wallet.name }}</strong></h2>
+        <h2><strong>{{ wallet.name }} [{{ wallet.owner }}]</strong></h2>
     </div>
     <div class="col-md-3 center">
         <h2>{{ '%0.2f' % wallet.money }} zł</h2>
